--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -417,4 +417,9 @@
             }
         }
     }
+    >.elementor-container{
+        @include xl{
+            padding: 0 82px;
+        }
+    }
 }
